--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "spected": "^0.7.0",
+    "styled-components": "^4.1.3",
     "yup": "^0.27.0"
   },
   "scripts": {
