--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "joi": "^14.3.1"
+  },
+  "scripts": {
+    "build": "cp -a client/src/lib/ ./src & babel src -d lib"
   }
 }
