--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "formik": "^1.5.1",
+    "jest-dom": "^3.1.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router": "^4.4.0",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
+    "react-testing-library": "^6.0.1",
     "spected": "^0.7.0",
     "styled-components": "^4.1.3",
     "yup": "^0.27.0"
@@ -17,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "coverage": "react-scripts test --env=jsdom --coverage"
   },
   "proxy": "http://localhost:3003/",
   "eslintConfig": {
@@ -28,5 +31,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "collectCoverageFrom": [
+      "**/src/components/**",
+      "**/src/lib/**",
+      "**/src/styles/**",
+      "!**/node_modules/**"
+    ]
+  }
 }
