--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "dependencies": {
     "formik": "^1.5.1",
-    "jest-dom": "^3.1.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-pose": "^4.0.8",
     "react-router": "^4.4.0",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
-    "react-testing-library": "^6.0.1",
-    "spected": "^0.7.0",
     "styled-components": "^4.1.3",
     "yup": "^0.27.0"
+  },
+  "devDependencies": {
+    "jest-dom": "^3.1.3",
+    "react-testing-library": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
